# todo-wasi

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
http/: todo.http
infrastructure/postgres/: Dockerfile  init.sql
src/: main.rs
src/config/: database.rs
src/dao/: mod.rs  todo_dao.rs
src/services/: delete_todo.rs  get_todos.rs  insert_todo.rs  mod.rs  update_todo.rs
