[package]
name = "todo-wasi"
version = "0.1.0"
edition = "2021"

[dependencies]

hyper_wasi = { version = "0.15.2", features = ["full"]}
tokio_wasi = { version = "1.25.2", features = ["rt", "macros", "net", "time", "io-util"]}
tokio-postgres_wasi = { version = "0.7.7", features = ["with-chrono-0_4"] }

chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["chrono_0_4"] }
serde_json = "1.0.128"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3